--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Angleu <angleuzua99@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
