--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^11.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
